Moved Core.getMetaObject to MicroflowRepository