@@ -3,7 +3,7 @@ package queue.helpers;
 public class ExponentialBackoffCalculator {
 
 	public int calculate(int base, int retry) {
-		Double exponentialBackOff = new Double(Math.round(base * Math.pow(2, retry)));
+		Double exponentialBackOff = Double.valueOf(Math.round(base * Math.pow(2, retry)));
 		int exponentialBackOffInt = exponentialBackOff.intValue();
 		return exponentialBackOffInt;
 	}
